--- a/src/main/resources/templates/components/adminMenu.html
+++ b/src/main/resources/templates/components/adminMenu.html
@@ -10,6 +10,9 @@
                 <li class="navbar-item"><a href="/listapedidos" class="navbar-link">Gestión de Pedidos</a></li>
                 <li class="navbar-item"><a href="/listaproductos" class="navbar-link">Gestión de Productos</a></li>
                 <li class="navbar-item"><a href="/reportes-ingresos" class="navbar-link">Reportes de Ingresos</a></li>
+                <li class="navbar-item">
+                    <a href="/logout" class="navbar-link" title="Cerrar Sesión">Cerrar Sesión</a>
+                </li>
             </ul>
         </nav>
     </header>
